finished service reservation

--- a/src/app/customerdashboard/booking/booking.component.html
+++ b/src/app/customerdashboard/booking/booking.component.html
@@ -12,10 +12,10 @@
     <div class="row">
         <div class="col-md-6">
          
-          <form action="">
+          <form #form="ngForm" autocomplete="off" (submit)="onSubmit(form)">
             <div>
               <label for="" class="d-block p-2 bg-info text-white">select the vehicle</label>
-             <select  id="vehiclereg" class="form-control" [(ngModel)]="vehiclereg" name="vehiclereg" >
+             <select  id="vehiclereg" class="form-control"  name="vehiclereg"  >
                <option value="{{vehicle.Reg_no}}" *ngFor="let vehicle of vehicle$ | async ">{{vehicle.Reg_no}}</option>
              </select>
             </div>
@@ -23,7 +23,7 @@
             <br>
             <div>
                 <label for="" class="d-block p-2 bg-info text-white">select date</label>
-               <input type="date" class="form-control" [(ngModel)]='resdate' name="resdate" id="resdate">
+               <input type="date" class="form-control" [(ngModel)]='resdate' name="resdate" id="resdate" >
               </div>
               
               <br>
@@ -31,24 +31,24 @@
             
             <hr>
             <div class="custom-control custom-radio">
-              <input type="radio" class="custom-control-input" id="defaultUnchecked" name="defaultExampleRadios" value="quickwash" [(ngModel)]='defaultExampleRadios'>
+              <input type="radio" class="custom-control-input" id="defaultUnchecked" name="defaultExampleRadios" value="quickwash" [(ngModel)]='bodywash' >
               <label class="custom-control-label" for="defaultUnchecked"><b>QUICK WASH</b> – Body wash, and tyre dressing (15 Minutes)</label>
             </div>
             
             <br>
             <div class="custom-control custom-radio">
-              <input type="radio" class="custom-control-input" id="defaultUnchecked2" name="defaultExampleRadios" value="detailedwash" [(ngModel)]='defaultExampleRadios'> 
+              <input type="radio" class="custom-control-input" id="defaultUnchecked2" name="defaultExampleRadios" value="detailedwash" [(ngModel)]='bodywash' > 
               <label class="custom-control-label" for="defaultUnchecked2"><b>DETAILED WASH</b> – Body wash, carpet wash, glass cleaning, dash cleaning and tyre dressing (30 Minutes)</label>
             </div>
             <br>
             <div class="custom-control custom-radio">
-              <input type="radio" class="custom-control-input" id="defaultUnchecked3" name="defaultExampleRadios" [(ngModel)]='defaultExampleRadios' value="washwax">
+              <input type="radio" class="custom-control-input" id="defaultUnchecked3" name="defaultExampleRadios" [(ngModel)]='bodywash' value="washwax" >
               <label class="custom-control-label" for="defaultUnchecked3"><b>WASH & WAX </b>  - Body wash, carpet wash, glass cleaning, tyre dressing, interior vacuuming, and 3M wax (45 Minutes)
               </label>
             </div>
             <br>
             <div class="custom-control custom-radio">
-              <input type="radio" class="custom-control-input" id="defaultUnchecked4" name="defaultExampleRadios" [(ngModel)]='defaultExampleRadios' value="autowash"> 
+              <input type="radio" class="custom-control-input" id="defaultUnchecked4" name="defaultExampleRadios" [(ngModel)]='bodywash' value="autowash"> 
               <label class="custom-control-label" for="defaultUnchecked4"><b>AUTO WASH </b>– Body wash, under wash, carpet wash, glass cleaning and interior vacuuming (20 Minutes)
               </label>
             </div>
@@ -56,17 +56,18 @@
             <div class="d-block p-2 bg-info text-white">Interior detailing</div> 
             <br>
             <div class="custom-control custom-checkbox">
-                <input type="checkbox" class="custom-control-input" id="interior" name="interior" [(ngModel)]="interior" (click)="changeInterior()">
+                <input type="checkbox" class="custom-control-input" id="interior" name="interior" [(ngModel)]="interior" (click)="changeInterior()" value="interior detailing" >
                 <label class="custom-control-label" for="interior"><b>INTERIOR DETAILING </b>involves a deep cleaning of the whole interior cabin of the automobile. </label>
             </div>
               <br>  
+              
           
             
             
             <div class="d-block p-2 bg-info text-white">Lubrication service</div> 
             <br>
             <div class="custom-control custom-checkbox">
-                <input type="checkbox" class="custom-control-input" id="lubrication1" name="lubrication1" [(ngModel)]="lubrication1" (click)="changecardInfo()">
+                <input type="checkbox" class="custom-control-input" id="lubrication1" name="lubrication1" [(ngModel)]="lubrication1" (click)="changecardInfo()" >
                 <label class="custom-control-label" for="lubrication1"><b>LUBRICATION</b> </label>
             </div>
             
@@ -84,7 +85,7 @@
             
             <br>
             <div class="custom-control custom-checkbox">
-                <input type="checkbox" class="custom-control-input" id="exteriorwax" name="exteriorwax" [(ngModel)]="exteriorwax" (click)="changeExteriorax()">
+                <input type="checkbox" class="custom-control-input" id="exteriorwax" name="exteriorwax" [(ngModel)]="exteriorwax" (click)="changeExteriorax()" >
                 <label class="custom-control-label" for="exteriorwax"><b>EXTERIOR WAXING </b> </label>
             </div>
           
@@ -92,30 +93,30 @@
             <div class="d-block p-2 bg-info text-white">Other specialized services</div> 
             <br>  
             <div class="custom-control custom-checkbox">
-                <input type="checkbox" class="custom-control-input" id="engine_oil_and_filter_change" name="engine_oil_and_filter_change" [(ngModel)]="engine_oil_and_filter_change" (click)="changeengineOilFilter()">
+                <input type="checkbox" class="custom-control-input" id="engine_oil_and_filter_change" name="engine_oil_and_filter_change" [(ngModel)]="engine_oil_and_filter_change" (click)="changeengineOilFilter()" >
                 <label class="custom-control-label" for="engine_oil_and_filter_change"><b>Engine Oil and Filter Change</b>  </label>
             </div>
             
             <br>
             <div class="custom-control custom-checkbox">
-                <input type="checkbox" class="custom-control-input" id="engineclean" [(ngModel)]="engineclean" name="engineclean" (click)="EngineCleaning()">
+                <input type="checkbox" class="custom-control-input" id="engineclean" [(ngModel)]="engineclean" name="engineclean" (click)="EngineCleaning()" > 
                 <label class="custom-control-label" for="engineclean"><b>Engine Cleaning</b> </label>
             </div>
            
             <br>
             <div class="custom-control custom-checkbox">
-                <input type="checkbox" class="custom-control-input" id="flushreplace" name="flushreplace" [(ngModel)]="flushreplace" (click)="RadiatorcoolerntReplace()">
+                <input type="checkbox" class="custom-control-input" id="flushreplace" name="flushreplace" [(ngModel)]="flushreplace" (click)="RadiatorcoolerntReplace()" >
                 <label class="custom-control-label" for="flushreplace"><b>Radiator Coolant Flush and Replacement</b></label>
             </div>
             
             <br>
             <div class="custom-control custom-checkbox">
-                <input type="checkbox" class="custom-control-input" id="enginescan" name="enginescan" [(ngModel)]="enginescan" (click)="EngineScan()">
+                <input type="checkbox" class="custom-control-input" id="enginescan" name="enginescan" [(ngModel)]="enginescan" (click)="EngineScan()" >
                 <label class="custom-control-label" for="enginescan"><b>Engine Scanning</b> </label>
             </div>
-           
+           <br>
             <div>
-    
+              <button type="submit" class="btn btn-success" >RESERVE THE DATE</button>
             </div>
           </form>
         </div>
