--- a/src/app/qrscanner/qrscanner.component.html
+++ b/src/app/qrscanner/qrscanner.component.html
@@ -1,5 +1,5 @@
 
-<div class="row">
+<div class="row" [hidden]="webcam">
         <div class="col-md-1"></div>
         <div class="col-md-10">
                 <qr-scanner
@@ -11,4 +11,62 @@
                 </qr-scanner>            
         </div>
         <div class="col-md-1"></div>
+</div>   
+<div class="row">
+        
+        <div class="col-md-6">
+        
+        <br>
+        <div *ngFor="let service of service$ | async" >
+
+        <label for="" class="">vehicle registration:<b>{{service.vehiclereg}}</b></label>
+        
+        <br>
+        <label for="" class="">Reservation date:<b>{{service.resdate}}</b></label>
+        
+        <br>
+        <label for="" class="d-block p-2 bg-info text-white">car wash package</label>
+        {{service.defaultExampleRadios}}
+        
+        
+        <br>
+        <label for="" class="d-block p-2 bg-info text-white">other pusrchases</label>
+        <div class="{{service.lubrication1}} d-block p-2" style="margin-left:10px">lubrication service </div>
+        <br>
+        <div class="{{service.tyredashdress}} d-block p-2" style="margin-left:10px">Tyre dressing </div>
+        <br>
+        <div class="{{service.engine_oil_and_filter_change}} d-block p-2" style="margin-left:10px">Engine oil and filter change </div>
+        <br>
+        <div class="{{service.engineclean}} d-block p-2" style="margin-left:10px">Engine cleaning </div>
+        <br>
+        <div class="{{service.flushreplace}} d-block p-2" style="margin-left:10px">Flush replacement  </div>
+        <br>
+        <div class="{{service.enginescan}} d-block p-2" style="margin-left:10px">Engine scan </div>
+        <br>
+        <div class="{{service.exteriorwax}} d-block p-2" style="margin-left:10px">Exterior waxing  </div>
+        <br>
+        <div class="{{service.interior}} d-block p-2" style="margin-left:10px">Interior services  </div>
+
+       
+        </div>
+        
+        </div>
 </div>
+<style>
+.true{
+        background-color:#239B56;
+        height:40px;
+        width:400px;
+        color:white;
+        margin-left:5px;
+}
+.false{
+background-color:#CB4335    ;
+height:40px;
+width:400px;
+color:white;
+margin-left:5px
+}
+</style>
+
+
