--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -2,8 +2,8 @@
 
 <div class="container" style="background-image:url('../assets/image/g.png');background-repeat:no-repeat;margin-top:20px">
   <div class="row">
-    <div class="col-md-4"></div>
-    <div class="col-md-4">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
       <div class="displayTable">
         <div class="displayTableCell">
       
@@ -16,17 +16,37 @@
              
           
             </div>
+            <div class="row">
+              <div class="col-md-6">
+                <div class="formGroup">
+                  <input type="text" class="form-control" placeholder="first name" #fname required>
+                </div>
+                
+              </div>
+              <div class="col-md-6">
+                <div class="formGroup">
+                  <input type="text" class="form-control" placeholder="last name" #lname required>
+                </div>
+              </div>
+            </div>
+            
+            
+            <br>
+            <div class="formGroup">
+              <input type="text" class="form-control" placeholder="telephone" #telephone required>
+            </div>
             <br>
             <div class="formGroup">
               <input type="email" class="form-control" placeholder="Email Address" #userEmail required>
             </div>
             <br>
+            
             <div class="formGroup">
               <input type="password" class="form-control" placeholder="Password" #userPwd required>
             </div>
             
             <div class="formGroup">
-              <input type="button" class="btn btn-info btn-block my-4" value="Sign Up" (click)="authService.SignUp(userEmail.value, userPwd.value)">
+              <input type="button" class="btn btn-info btn-block my-4" value="Sign Up" (click)="authService.SignUp(userEmail.value, userPwd.value,fname.value,lname.value,telephone.value)">
             </div>
       
             
@@ -53,6 +73,6 @@
       
       </div>
     </div>
-    <div class="col-md-4"></div>
+    <div class="col-md-3"></div>
   </div>
 </div>
