--- a/src/app/customerdashboard/vehicles/vehicle/vehicle.component.html
+++ b/src/app/customerdashboard/vehicles/vehicle/vehicle.component.html
@@ -20,7 +20,15 @@
             </div>
                 <div class="form-group">
                 <label for="">vehicle type</label>
-                <input   class="form-control"  name="vehicle_type"  [(ngModel)]="service.FormData.vehicle_type" #vehicle_type="ngModel" required>
+                
+                <select   class="form-control"  name="vehicle_type"  [(ngModel)]="service.FormData.vehicle_type" #vehicle_type="ngModel" required>
+                  <option value="motorcycle"></option>
+                  <option value="threewheeler"></option>
+                  <option value="Car (C class) licence"></option>
+                  <option value="Light Rigid (LR class) heavy vehicle"></option>
+                  <option value="Medium Rigid (MR class) heavy vehicle"></option>
+                  <option value="Special tractor "></option>
+                </select>
                 <div class="validation-error" *ngIf="vehicle_type.invalid && vehicle_type.touched" style="color:red">This field is required</div>
               </div>
         
