--- a/src/app/customerdashboard/vehicles/vehicle-list/vehicle-list.component.html
+++ b/src/app/customerdashboard/vehicles/vehicle-list/vehicle-list.component.html
@@ -1,5 +1,5 @@
 
-<div style="margin-top:100px">
+<div style="margin-top:100px;">
   <h4>Registered vehicles</h4>
     <table class="table table-hover">
     <thead>
