--- a/src/app/customerdashboard/vehicles/vehicles.component.html
+++ b/src/app/customerdashboard/vehicles/vehicles.component.html
@@ -6,10 +6,10 @@
       <app-sidenav></app-sidenav>
       </div>
     
-      <div class="col-md-10">
-      <div class="row">
-        <div class="col-md-6"><app-vehicle></app-vehicle></div>
-        <div class="col-md-6"><app-vehicle-list></app-vehicle-list></div>
+      <div class="col-md-10" style="background-image:url('../assets/image/g.png');background-repeat:no-repeat;">
+      <div class="row" style="background-color:white;opacity:0.95;color:black">
+        <div class="col-md-6" ><app-vehicle></app-vehicle></div>
+        <div class="col-md-6" ><app-vehicle-list></app-vehicle-list></div>
       </div>
 
 
