--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -19,7 +19,7 @@
     <!-- Links -->
     <ul class="navbar-nav mr-auto">
       <li class="nav-item ">
-        <a class="nav-link" href="#">Home
+        <a class="nav-link" href="/dashboard">Home
           <span class="sr-only"></span>
         </a>
       </li>
