--- a/src/app/customerdashboard/vehicles/vehicle/vehicle.component.html
+++ b/src/app/customerdashboard/vehicles/vehicle/vehicle.component.html
@@ -60,6 +60,7 @@
                 <div class="form-group">
                   <button type="submit" class="btn btn-primary" [disabled]="form.invalid">ADD VEHICLE</button>
                 </div>
+                <img src="{{imgurl}}">
           </form>
     </div>
   
