modified qr scanner component

--- a/src/app/customerdashboard/vehicles/vehicles.component.html
+++ b/src/app/customerdashboard/vehicles/vehicles.component.html
@@ -2,14 +2,14 @@
 <div class="container-fluid">
   
     <div class="row">
-      <div class="col-md-2" style="background-color:rgb(2, 12, 22);height:600px">
+      <div class="col-md-2" style="background-color:rgb(2, 12, 22);height:900px">
       <app-sidenav></app-sidenav>
       </div>
     
       <div class="col-md-10" style="background-image:url('../assets/image/g.png');background-repeat:no-repeat;">
       <div class="row" style="background-color:white;opacity:0.95;color:black">
         <div class="col-md-6" ><app-vehicle></app-vehicle></div>
-        <div class="col-md-6" ><app-vehicle-list></app-vehicle-list></div>
+        <div class="col-md-6" style="opacity:0.9" ><app-vehicle-list></app-vehicle-list></div>
       </div>
 
 
