--- a/src/app/customerdashboard/vehicles/vehicle/vehicle.component.html
+++ b/src/app/customerdashboard/vehicles/vehicle/vehicle.component.html
@@ -14,8 +14,8 @@
                 
               </div>
             <div class="" >
-              <label for="">Registration Number</label>
-              <input type="text" class="form-control" name="Reg_no" [(ngModel)]="service.FormData.Reg_no" id="Reg_no" required #Reg_no="ngModel">
+              <label for="">vehicle Registration Number</label>
+              <input type="text" class="form-control" name="Reg_no" [(ngModel)]="service.FormData.Reg_no" id="Reg_no" required #Reg_no="ngModel" ng-trim="true">
               <div class="validation-error" *ngIf="Reg_no.invalid && Reg_no.touched" style="color:red">This field is required</div>
             </div>
             <br>
@@ -35,17 +35,17 @@
         
                 <div class="form-group">
                   <label for="">current odometer reading</label>
-                  <input  class="form-control"  name="Odometer_reading"  [(ngModel)]="service.FormData.Odometer_reading" id="Odometer_reading" required #Odometer_reading="ngModel">
+                  <input  class="form-control"  name="Odometer_reading"  [(ngModel)]="service.FormData.Odometer_reading" id="Odometer_reading" required #Odometer_reading="ngModel" type="number">
                   <div class="validation-error" *ngIf="Odometer_reading.invalid && Odometer_reading.touched" style="color:red">This field is required</div>
                 </div>
         
                 <div class="form-group">
                     <label for="">Manufactured year</label>
-                    <input  type="year" class="form-control"  name="last_service_date"  [(ngModel)]="service.FormData.last_service_date" id="last_service_date" #last_service_date="ngModel">
+                    <input  type="month" class="form-control"  name="last_service_date"  [(ngModel)]="service.FormData.last_service_date" id="last_service_date" #last_service_date="ngModel">
                     
                 </div>
                 <div class="form-group">
-                      <label for="">Model</label>
+                      <label for="">vehicle Model</label>
                       <input   class="form-control"  name="model"  [(ngModel)]="service.FormData.model" id="model"  #model="ngModel" required>
                       <div class="validation-error" *ngIf="model.invalid && model.touched" style="color:red">This field is required</div>
                 </div>
@@ -60,7 +60,7 @@
                 <div class="form-group">
                   <button type="submit" class="btn btn-primary" [disabled]="form.invalid">ADD VEHICLE</button>
                 </div>
-                <img src="{{imgurl}}">
+                <img src="{{imgurl}}" style="height:200px;width:300px" [hidden]='imagediv'>
           </form>
     </div>
   
