--- a/src/app/customerdashboard/booking/booking.component.html
+++ b/src/app/customerdashboard/booking/booking.component.html
@@ -24,7 +24,7 @@
             <br>
             <div>
                 <label for="" class="d-block p-2 bg-info text-white">select date</label>
-               <input type="date" class="form-control" [(ngModel)]='resdate' name="resdate" id="resdate" >
+               <input type="date" class="form-control" [(ngModel)]='resdate' name="resdate" id="resdate" (ngModelChange)="selectdate()">
               </div>
               
               <br>
