finished vehicle confirmation component

--- a/src/app/customerdashboard/vehicles/vehicle/vehicle.component.html
+++ b/src/app/customerdashboard/vehicles/vehicle/vehicle.component.html
@@ -28,7 +28,7 @@
                   <option value="Car (C class) licence">car (c class)</option>
                   <option value="Light Rigid (LR class) heavy vehicle">Light Rigid (LR class) heavy vehicle</option>
                   <option value="Medium Rigid (MR class) heavy vehicle">Medium Rigid (MR class) heavy vehicle</option>
-                  <option value="Special tractor "></option>
+                  <option value="Special tractor ">tractor</option>
                 </select>
                 <div class="validation-error" *ngIf="vehicle_type.invalid && vehicle_type.touched" style="color:red">This field is required</div>
               </div>
