--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -32,9 +32,9 @@
             </a>
           </li>
 
-          <li class="nav-item" style="background-color:black">
-              <a class="nav-link" href="#"  style="color:white">
-               Scan 
+          <li class="nav-item" style="background-color:black" routerLink="/license">
+              <a class="nav-link"  style="color:white">
+               Add license and Insuarence details 
               </a>
             </li>
 
