changed license type component

--- a/src/app/licence-type/licence-type.component.html
+++ b/src/app/licence-type/licence-type.component.html
@@ -36,4 +36,4 @@
     <div class="form-group">
         <button type="button "[disabled]="form.invalid" class="btn btn-lg btn-block btn-info">SUBMIT</button>
     </div>
-</form>
+</form>a
